// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      Object {
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(116,130,148,0.55)",
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          resizeMode="stretch"
          source={1}
          style={
            Object {
              "alignItems": "center",
              "height": 73.2,
              "marginLeft": 264,
              "marginTop": 100,
              "width": 222,
            }
          }
        />
        <View
          style={
            Object {
              "marginTop": 150,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 50,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 12,
                  "marginBottom": 6,
                }
              }
            >
              EMAIL
            </Text>
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              keyBoardType="email-address"
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="name@example.com"
              returnKeyType="next"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "lineHeight": 26,
                }
              }
              underlineColorAndroid="#eff1f7"
              value=""
            />
          </View>
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 50,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 12,
                  "marginBottom": 6,
                }
              }
            >
              PASSWORD
            </Text>
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              focus={undefined}
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              palceholder="password"
              returnKeyType="go"
              secureTextEntry={true}
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "lineHeight": 26,
                }
              }
              value=""
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 20,
                },
                Object {},
              ]
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EA3154",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 100,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#fff",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                LOGIN
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`show progress when logging in 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={1}
    style={
      Object {
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(116,130,148,0.55)",
        "flex": 1,
        "height": 1334,
        "position": "absolute",
        "top": 0,
        "width": 750,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Image
          resizeMode="stretch"
          source={1}
          style={
            Object {
              "alignItems": "center",
              "height": 73.2,
              "marginLeft": 264,
              "marginTop": 100,
              "width": 222,
            }
          }
        />
        <View
          style={
            Object {
              "marginTop": 150,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 50,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 12,
                  "marginBottom": 6,
                }
              }
            >
              EMAIL
            </Text>
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              keyBoardType="email-address"
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="name@example.com"
              returnKeyType="next"
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "lineHeight": 26,
                }
              }
              underlineColorAndroid="#eff1f7"
              value=""
            />
          </View>
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#eff1f7",
                "flexDirection": "column",
                "height": 50,
                "marginBottom": 15,
                "marginHorizontal": 30,
                "paddingBottom": 5,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 12,
                  "marginBottom": 6,
                }
              }
            >
              PASSWORD
            </Text>
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              focus={undefined}
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              palceholder="password"
              returnKeyType="go"
              secureTextEntry={true}
              style={
                Object {
                  "color": "#fff",
                  "flex": 1,
                  "fontSize": 18,
                  "lineHeight": 26,
                }
              }
              value=""
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "marginTop": 20,
                },
                Object {
                  "opacity": 0.2,
                },
              ]
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              collapsable={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EA3154",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 100,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <ActivityIndicator
                animating={true}
                color="#FFFFFF"
                hidesWhenStopped={true}
                size="small"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
